.model-open and html styling to prevent background image from jumping on modal open

--- a/style.css
+++ b/style.css
@@ -374,6 +374,19 @@ a:hover {
 
 /*Modal*/
 
+/*
+prevent background image from jumping. Causes modal to jump slightly  but it is
+less disruptive
+*/
+.modal-open {
+  padding-right: 0 !important;
+}
+
+html {
+  overflow-y: scroll !important;
+}
+
+
 .entry-modal-button {
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 500;
